# SLAM

./: .gitignore  README.md  notes.txt  pyproject.toml
docs/: README_Encoders.txt  suggestions.txt
notebooks/: debug_mapping.ipynb  debug_occupancy_grid.ipynb  debug_slam.ipynb
scripts/: evaluate_dataset.py  run_mapping.py  run_occupancy_grid.py  run_odometry.py  run_slam.py
src/slam_project/: config.py
src/slam_project/localization/: odometry.py
src/slam_project/localization/.ipynb_checkpoints/: odometry-checkpoint.py
src/slam_project/mapping/: mapper.py
src/slam_project/models/: occupancy_grid.py
src/slam_project/visualization/: animations.py
tests/: test_load_data.py  test_particle_filter.py
utils/MapUtils/: test_MapUtils.py
utils/MapUtilsCython/: MapUtils_fclad.c  setup.py  test_getMapCellsFromRay.py
